--- a/webgenerator.yaml
+++ b/webgenerator.yaml
@@ -51,7 +51,7 @@ targets:
         sortorder: ctime
     content/Concepts:
         source: Concepts
-        template: docs.html
+        template: left-nav.html
         file_map:
             index.html: README.md
         types:
@@ -61,9 +61,19 @@ targets:
         index_link_name: Concepts
     # These keys are paths from the repository root to directories.
     # They may contain slashes
+    content/Vision:
+        source: website/Vision
+        template: left-nav.html
+        file_map:
+            index.html: vision.md
+        types:
+            md: null
+        user_menu: True
+        index_link_name: Vision
+        sortorder: ['weight', 'ctime']
     content/Proposals:
         source: Proposals
-        template: docs.html
+        template: left-nav.html
         file_map:
             index.html: README.md
         types:
@@ -73,7 +83,7 @@ targets:
         index_link_name: Proposals
     content/Manuals:
         source: Manuals
-        template: docs.html
+        template: left-nav.html
         file_map:
             index.html: README.md
         types:
@@ -81,15 +91,15 @@ targets:
             md: null
         docs_menu: True
         index_link_name: Manuals
-    content/Documentation:
-        source: Docs
-        template: docs.html
+    content/Sub-Projects:
+        source: Sub-Projects
+        template: left-nav.html
         file_map:
             index.html: README.md
         types:
             # only md, all concepts are meant to be in this format
             md: null
         docs_menu: True
-        index_link_name: Documentaion
+        index_link_name: Sub-Projects
         file_map:
             index.html: README.md
