Set the timezont to Europe/Germany.

--- a/webgenerator.yaml
+++ b/webgenerator.yaml
@@ -1,4 +1,5 @@
 template_folder: website/templates
+timezone: Europe/Berlin
 freezer_config:
     url_root: http://atem.graphicore.de
 source_defaults:
